--- a/popup/history.html
+++ b/popup/history.html
@@ -34,7 +34,7 @@
             .video:hover {
                 background-color: #272727;
             }
-            a:hover {
+            .video:hover a {
                 color: #f1f1f1;
             }
             a {
